@@ -45,7 +45,7 @@ namespace MCForge
             {
                 Player.SendMessage(p, "Could not find player. Searching Player DB.");
 
-                DataTable FindIP = MySQL.fillData("SELECT IP FROM Players WHERE Name='" + message + "'");
+                DataTable FindIP = Server.useMySQL ? MySQL.fillData("SELECT IP FROM Players WHERE Name='" + message + "'") : SQLite.fillData("SELECT IP FROM Players WHERE Name='" + message + "'");
 
                 if (FindIP.Rows.Count == 0) { Player.SendMessage(p, "Could not find any player by the name entered."); FindIP.Dispose(); return; }
 
@@ -57,7 +57,7 @@ namespace MCForge
                 message = who.ip;
             }
 
-            DataTable Clones = MySQL.fillData("SELECT Name FROM Players WHERE IP='" + message + "'");
+            DataTable Clones = Server.useMySQL ? MySQL.fillData("SELECT Name FROM Players WHERE IP='" + message + "'") : SQLite.fillData("SELECT Name FROM Players WHERE IP='" + message + "'");
 
             if (Clones.Rows.Count == 0) { Player.SendMessage(p, "Could not find any record of the player entered."); return; }
 
