@@ -37,7 +37,7 @@ namespace MCForge
         {
             int bancount = Group.findPerm(LevelPermission.Banned).playerList.All().Count;
 
-            DataTable count = MySQL.fillData("SELECT COUNT(id) FROM Players");
+            DataTable count = Server.useMySQL ? MySQL.fillData("SELECT COUNT(id) FROM Players") : SQLite.fillData("SELECT COUNT(id) FROM Players");
             Player.SendMessage(p, "A total of " + count.Rows[0]["COUNT(id)"] + " unique players have visited this server.");
             Player.SendMessage(p, "Of these players, " + bancount + " have been banned.");
             count.Dispose();
