@@ -23,6 +23,7 @@ v5.3.0.0
 - Made it so that /inv will send a message to the user if the target (or themselves) has had invincible mode enabled/disabled.
 - Made it so you can use /inv on another person from console. 
 - Disabled color codes in Global Chat, it's just too risky with the exploits.
+- Added Suppot for SQLite3 (part done)
 
 v5.2.0.0
 - Fixed the server-breaking freeze bug that happened when a player lagged (NOT logged) out.
